--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "cd ../frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
